--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>忘记密码</title>
-	<link rel="stylesheet" type="text/css" href="./css/wangjimima.css">
+	<link rel="stylesheet" type="text/css" href="./css/forgetpassword.css">
 </head>
 <body>
 <div class="all">
@@ -13,7 +13,7 @@
 		</div>
 		<div class="one2">
 			<span>你好，请登录</span>
-			<span><a href="#">免费注册</a></span>
+			<span><a href="./login.html">免费注册</a></span>
 			<span>|我的订单</span>
 				<select>
 					<option>我的京东</option>
