--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>京东</title>
 	<link rel="shortcut icon" type="text/css" href="./images/jingdong.ico">
 	<link rel="stylesheet" type="text/css" href="./css/common.css">
-	<link rel="stylesheet" href="./css/zhuyemian.css">
+	<link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 	<div class="all">
@@ -20,8 +20,8 @@
 			<span>北京</span>
 			<ul>
 				<li>你好，</li>
-				<li><a href="./denglu.html">请登录</a></li>
-				<li><a href="./zhuce.html">免费注册</a></li>
+				<li><a href="./login.html">请登录</a></li>
+				<li><a href="./register.html">免费注册</a></li>
 				<li>|</li>
 				<li>我的订单</li>
 				<li>|</li>
