--- a/login.html
+++ b/login.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>帐号登录</title>
-	<link rel="stylesheet" type="text/css" href="./css/zhanghaodenglu.css">
+	<title>登录</title>
+	<link rel="stylesheet" type="text/css" href="./css/login.css">
 </head>
 <body>
 	<div class="all">
@@ -36,33 +36,21 @@
 					</div>
 					<div class="three212">
 						<div class="three2121">
-							<a href="file:///C:/Users/%E7%8E%8B%E6%99%B6/Desktop/project/jingdong/denglu.html"">扫码登录</a>
+							<a href="./login.html">扫码登录</a>
 						</div>
 						<div class="three2122">
-							<a href="file:///C:/Users/%E7%8E%8B%E6%99%B6/Desktop/project/jingdong/zhanghaodenglu.html"">帐号登录</a>
+							<a href="./accountlogin.html">帐号登录</a>
 						</div>
 					</div>
 					<div class="three213">
-						<div class="three2131">
-							<img src="./images/107.PNG">
-						</div>
-						<div class="three2132">
-							<input type="" name="" placeholder="邮箱/用户名/已验证手机">
-						</div>
+						<img src="./images/104.PNG">
 					</div>
 					<div class="three214">
-						<div class="three2141">
-							<img src="./images/108.PNG">
-						</div>
-						<div class="three2142">
-							<input type="password" name="psw" placeholder="密码">
-						</div>
+						<span>打开<a href="#">手机京东</a></span>
+						<span>扫描二维码</span>
 					</div>
 					<div class="three215">
-						<a href="file:///C:/Users/%E7%8E%8B%E6%99%B6/Desktop/project/jingdong/wangjimima.html#">忘记密码</a>
-					</div>
-					<div class="three217">
-						<button type="submit">登录</button>
+						<img src="./images/105.PNG">
 					</div>
 					<div class="three216">
 					    <div class="three2161">
@@ -73,7 +61,7 @@
 						</div>
 						<div class="three2163">
 							<img src="./images/106.PNG">
-							<a href="file:///C:/Users/%E7%8E%8B%E6%99%B6/Desktop/project/jingdong/zhuce.html">立即注册</a>
+							<a href="./register.html">立即注册</a>
 						</div> 
 					</div>
 				</div>
