--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>注册</title>
-	<link rel="stylesheet" type="text/css" href="./css/zhuce.css">
+	<link rel="stylesheet" type="text/css" href="./css/register.css">
 </head>
 <body>
 <div class="all">
@@ -13,7 +13,7 @@
 		</div>
 		<div class="one2">
 			<span>已有帐号？
-            <a href="file:///C:/Users/%E7%8E%8B%E6%99%B6/Desktop/project/jingdong/denglu.html">请登录></a>
+            <a href="./login.html">请登录></a>
 			</span>
 		</div>
 	</div>
